<resources>
    <string name="app_name">CodeForum</string>
    <string name="login_name">Login</string>
    <string name="register_name">Register</string>
    <string name="find_friend_name">SearchFriend</string>
    <string name="user_icon_name">UserIcon</string>
    <string name="set_info_name">个人信息</string>
    <string name="title_home">首页</string>
    <string name="title_discover">发现</string>
    <string name="title_notifications">消息</string>
    <string name="title_friend">好友</string>
    <string name="title_personal">我的</string>
    <string name="discover_content_name">发现内容</string>
    <string name="new_blog_name">新建博客</string>
    <string name="icon_test">测试</string>
    <string name="icon">图标</string>
    <string name="login_register">登录/注册</string>
    <string name="return_login">退出登录</string>
    <string name="my_blog">我的博客</string>
    <string name="my_data">我的信息</string>
    <string name="account">账&#160;&#160;&#160;&#160;号</string>
    <string name="user_name">用&#160;&#160;户&#160;&#160;名</string>
    <string name="user_pwd">密&#160;&#160;&#160;&#160;码</string>
    <string name="cellphone">手机号</string>
    <string name="birth_date">出生日期</string>
    <string name="gender">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="hometown">家&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;乡</string>
    <string name="please_input_hometown">请输入家乡所在城市</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_user_name_cellphone">请输入用户名/手机号</string>
    <string name="please_input_cellphone">请输入手机号</string>
    <string name="please_input_user_pwd">请输入密码</string>
    <string name="please_input_birth_date">请选择您的出生日期</string>
    <string name="please_input_blog_title">请输入博客的题目</string>
    <string name="please_input_blog_content">请输入博客的内容</string>
    <string name="please_input_blog_url">请输入博客的外部链接</string>
    <string name="please_input_blog_classification">请选择博客的分类</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="send">发送</string>
    <string name="back">返回</string>
    <string name="login_pwd">密码登录</string>
    <string name="login_code">验证码登录</string>
    <string name="change_user_icon">更换头像</string>
    <string name="please_input_twice_user_pwd">请再次输入密码</string>
    <string name="please_input_sms">请输入验证码</string>
    <string name="please_input_discover_content">请输入要查找的内容</string>
    <string name="please_input_comment">请输入评论内容</string>
    <string name="discover_search">查找</string>
    <string name="save">保存</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="send_sms">发送短信</string>
    <string name="show_hide">显示和隐藏密码</string>
    <string name="comment">评论</string>
    <string name="new_blog">新建</string>
    <string name="user_info">用户信息</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
