<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_friend_black_24dp"
        android:title="@string/title_friend" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/ic_personal_black_24dp"
        android:title="@string/title_personal" />

</menu>
