<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register_text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toStartOf="@id/register_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/please_input_user_name"
        app:layout_constraintStart_toEndOf="@id/register_text_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/register_text_user_name"/>

    <TextView
        android:id="@+id/register_text_user_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:text="@string/user_pwd"
        app:layout_constraintEnd_toStartOf="@id/register_user_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_user_name" />

    <EditText
        android:id="@+id/register_user_pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/please_input_user_pwd"
        app:layout_constraintStart_toEndOf="@id/register_text_user_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_user_name"
        app:layout_constraintBaseline_toBaselineOf="@id/register_text_user_pwd"/>

    <TextView
        android:id="@+id/register_text_twice_user_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:text="@string/user_pwd"
        app:layout_constraintEnd_toStartOf="@id/register_twice_user_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_user_pwd" />

    <EditText
        android:id="@+id/register_twice_user_pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/please_input_twice_user_pwd"
        app:layout_constraintStart_toEndOf="@id/register_text_twice_user_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_user_pwd"
        app:layout_constraintBaseline_toBaselineOf="@id/register_text_twice_user_pwd"/>

    <TextView
        android:id="@+id/register_text_cellphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:text="@string/cellphone"
        app:layout_constraintEnd_toStartOf="@id/register_twice_user_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_twice_user_pwd" />

    <EditText
        android:id="@+id/register_cellphone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/please_input_cellphone"
        app:layout_constraintStart_toEndOf="@id/register_text_cellphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_twice_user_pwd"
        app:layout_constraintBaseline_toBaselineOf="@id/register_text_cellphone"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/register_text_cellphone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>