<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_blog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_blog_actionbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/new_blog_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back_white_24dp"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.15" />

        <TextView
            android:id="@+id/new_blog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/new_blog_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/new_blog_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/new_blog_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/please_input_blog_title"
        android:background="@drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/new_blog_actionbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/new_blog_url"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/please_input_blog_url"
        android:background="@drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/new_blog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Spinner
        android:id="@+id/new_blog_classification"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:spinnerMode="dropdown"
        android:overlapAnchor="false"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/new_blog_url"/>

    <EditText
        android:id="@+id/new_blog_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:scrollbars="vertical"
        android:hint="@string/please_input_blog_content"
        android:background="@drawable/edit_text_no_radius"
        app:layout_constraintTop_toBottomOf="@id/new_blog_classification"
        app:layout_constraintBottom_toTopOf="@id/new_blog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/new_blog"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/new_blog"
        android:textColor="@drawable/button_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>