<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:background="@drawable/login_viewpager"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/user_name"
        android:background="@drawable/edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/please_input_user_name_cellphone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/user_pwd"
        android:background="@drawable/edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="50dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/please_input_user_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"/>

    <ImageView
        android:id="@+id/login_show_hide_grey"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_show_hide_grey_24dp"
        android:contentDescription="@string/show_hide"
        app:layout_constraintEnd_toEndOf="@id/user_pwd"
        app:layout_constraintTop_toTopOf="@id/user_pwd"
        app:layout_constraintBottom_toBottomOf="@id/user_pwd"/>

    <ImageView
        android:id="@+id/login_show_hide_blue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_show_hide_blue_24dp"
        android:contentDescription="@string/show_hide"
        app:layout_constraintEnd_toEndOf="@id/user_pwd"
        app:layout_constraintTop_toTopOf="@id/user_pwd"
        app:layout_constraintBottom_toBottomOf="@id/user_pwd"/>

    <Button
        android:id="@+id/login"
        android:background="@drawable/button_style"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@drawable/button_font"
        app:layout_constraintTop_toBottomOf="@id/user_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/register_login"/>

    <Button
        android:id="@+id/register_login"
        android:background="@drawable/button_style"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@drawable/button_font"
        app:layout_constraintTop_toBottomOf="@id/user_pwd"
        app:layout_constraintStart_toEndOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>